--- a/labs.html
+++ b/labs.html
@@ -18,7 +18,7 @@
           <span class="brand-word">stewrobot</span>
         </a>
         <div class="top-actions">
-          <a class="btn" href="./index.html">← Home</a>
+          <a class="btn" href="./index.html#labs">↩ Back</a>
         </div>
       </div>
     </header>
