--- a/labs.html
+++ b/labs.html
@@ -18,16 +18,12 @@
           <span class="brand-word">stewrobot</span>
         </a>
         <div class="top-actions">
-          <a class="btn" href="./index.html#labs">↩ Back</a>
+          <a class="btn" href="./index.html?view=labs">← Back</a>
         </div>
       </div>
     </header>
 
     <main>
-      <section class="container section" style="padding-top:88px;">
-        <h1 style="margin-bottom:8px;">Labs 상세</h1>
-        <p class="muted" style="margin-top:0;">요약 카드에서 넘어온 상세 문서 페이지입니다. 각 항목은 앵커 링크로 직접 이동할 수 있습니다.</p>
-      </section>
 
       <section class="container section">
         <div class="labs-details">
