ux: remove labs section header arrow link and keep card-only navigation

--- a/index.html
+++ b/index.html
@@ -212,10 +212,7 @@
 
 
       <section id="labs" class="container section home-section">
-        <h2>
-          <span data-i18n="labs_title">Labs</span>
-          <a class="section-arrow" href="./labs.html" rel="noreferrer" aria-label="Open Labs details">↗</a>
-        </h2>
+        <h2 data-i18n="labs_title">Labs</h2>
         <p data-i18n="labs_intro">Experimental products, automation tools, and side builds that may evolve into full services.</p>
         <div class="cards labs-cards">
           <a class="card card-link" href="./labs.html#lab-board-engine">
