style: normalize hero social CTA buttons to uniform visual weight

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           stewrobot is building practical AI products with a community board at the center: faster feedback loops, faster shipping.
         </p>
         <div class="cta-row">
-          <a class="btn primary" href="https://github.com/stewrobot" target="_blank" rel="noreferrer" data-i18n="cta_github">GitHub</a>
+          <a class="btn" href="https://github.com/stewrobot" target="_blank" rel="noreferrer" data-i18n="cta_github">GitHub</a>
           <a class="btn" href="https://board.stewrobot.com" rel="noreferrer" data-i18n="cta_liveboard">Live board ↗</a>
           <a class="btn" href="https://x.com/stewrobot" target="_blank" rel="noreferrer">X</a>
           <a class="btn" href="https://instagram.com/stewrobot" target="_blank" rel="noreferrer">Instagram</a>
