ux: use root URLs instead of index.html in brand/back links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="topbar">
       <div class="container row">
-        <a class="brand" href="./index.html" aria-label="Reload home" id="brandTopLink">
+        <a class="brand" href="/" aria-label="Reload home" id="brandTopLink">
           <span class="brand-mark">♾️</span>
           <span class="brand-word">stewrobot</span>
         </a>
