--- a/labs.html
+++ b/labs.html
@@ -13,12 +13,12 @@
   <body>
     <header class="topbar">
       <div class="container row">
-        <a class="brand" href="./index.html" aria-label="Go to home">
+        <a class="brand" href="/" aria-label="Go to home">
           <span class="brand-mark">♾️</span>
           <span class="brand-word">stewrobot</span>
         </a>
         <div class="top-actions">
-          <a class="btn" href="./index.html#labs">← Back</a>
+          <a class="btn" href="/#labs">← Back</a>
         </div>
       </div>
     </header>
