--- a/labs.html
+++ b/labs.html
@@ -18,7 +18,7 @@
           <span class="brand-word">stewrobot</span>
         </a>
         <div class="top-actions">
-          <a class="btn" href="/#labs">← Back</a>
+          <a class="btn" href="/?back=1">← Back</a>
         </div>
       </div>
     </header>
