i18n: mark Korean and Japanese language badges as full completion

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               <button class="lang-btn" data-lang="id" role="menuitem">Bahasa Indonesia <span class="lang-state" data-i18n="lang_partial">partial</span></button>
               <button class="lang-btn" data-lang="fr" role="menuitem">Français <span class="lang-state" data-i18n="lang_partial">partial</span></button>
               <button class="lang-btn" data-lang="de" role="menuitem">Deutsch <span class="lang-state" data-i18n="lang_partial">partial</span></button>
-              <button class="lang-btn" data-lang="ja" role="menuitem">日本語 <span class="lang-state" data-i18n="lang_partial">partial</span></button>
-              <button class="lang-btn" data-lang="ko" role="menuitem">한국어 <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="ja" role="menuitem">日本語 <span class="lang-state full" data-i18n="lang_full">full</span></button>
+              <button class="lang-btn" data-lang="ko" role="menuitem">한국어 <span class="lang-state full" data-i18n="lang_full">full</span></button>
             </div>
           </div>
         </div>
