i18n: upgrade Hindi and Arabic to full-level copy and mark language badges full

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <button class="lang-toggle" id="langToggle" aria-haspopup="true" aria-expanded="false" aria-controls="langMenu">🌐</button>
             <div class="lang-menu" id="langMenu" role="menu" aria-hidden="true">
               <button class="lang-btn active" data-lang="en" role="menuitem">English <span class="lang-state full" data-i18n="lang_full">full</span></button>
-              <button class="lang-btn" data-lang="hi" role="menuitem">हिन्दी <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="hi" role="menuitem">हिन्दी <span class="lang-state full" data-i18n="lang_full">full</span></button>
               <button class="lang-btn" data-lang="es" role="menuitem">Español <span class="lang-state full" data-i18n="lang_full">full</span></button>
-              <button class="lang-btn" data-lang="ar" role="menuitem">العربية <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="ar" role="menuitem">العربية <span class="lang-state full" data-i18n="lang_full">full</span></button>
               <button class="lang-btn" data-lang="pt-BR" role="menuitem">Português (BR) <span class="lang-state full" data-i18n="lang_full">full</span></button>
               <button class="lang-btn" data-lang="id" role="menuitem">Bahasa Indonesia <span class="lang-state full" data-i18n="lang_full">full</span></button>
               <button class="lang-btn" data-lang="fr" role="menuitem">Français <span class="lang-state full" data-i18n="lang_full">full</span></button>
@@ -508,27 +508,91 @@
         hi: {
           nav_home: 'होम', nav_about: 'ओवरव्यू', nav_status: 'प्रगति', nav_contact: '24/7', nav_labs: 'लैब्स', nav_deploy: 'डिप्लॉय',
           lang_full: 'पूर्ण', lang_partial: 'आंशिक',
-          eyebrow: '♾️ कॉस्मिक AI बिल्डर', hero_title: 'कम्युनिटी-केंद्रित लॉन्च जारी है।',
-          hero_lead: 'stewrobot तेज़ फीडबैक लूप के साथ व्यावहारिक AI उत्पाद बना रहा है।',
-          about_title: 'ओवरव्यू', status_title: 'प्रगति', labs_title: 'लैब्स', deploy_title: 'डिप्लॉय',
-          labs_intro: 'ऐप, समाधान और ऑटोमेशन प्रयोगों का स्थान, जो आगे चलकर सेवाओं में बदल सकते हैं।',
-          board_title: '📋 24/7', board_api_link: 'API दस्तावेज़', board_tab_home: '📋 सूची', board_tab_write: '✏️ लिखें',
-          board_total_label: 'कुल', board_col_id: 'सं.', board_col_title: 'शीर्षक', board_col_author: 'लेखक', board_col_created: 'तारीख', board_col_views: 'देखा गया', board_col_comments: 'टिप्पणियाँ',
+          eyebrow: '♾️ कॉस्मिक AI बिल्डर',
+          hero_title: 'कम्युनिटी-केंद्रित लॉन्च जारी है।',
+          hero_lead: 'stewrobot तेज़ फीडबैक चक्रों के साथ व्यावहारिक AI उत्पाद बना रहा है।',
+          cta_github: 'GitHub',
+          about_title: 'ओवरव्यू',
+          about_text: 'stewrobot विचारों को तेज़ी से वास्तविक उपयोग वाले AI उत्पादों में बदलता है।',
+          about_text_2: 'हम समस्या की स्पष्ट परिभाषा, तेज़ प्रोटोटाइप और वास्तविक उपयोगकर्ताओं के निरंतर फीडबैक पर ध्यान देते हैं।',
+          about_text_3: 'वर्तमान दायरा वेब प्लेटफ़ॉर्म आर्किटेक्चर, मोबाइल विस्तार की नींव और स्वचालित वर्कफ़्लो तक फैला है।',
+          status_title: 'प्रगति',
+          status_1_title: '✅ डोमेन और Pages', status_1_text: 'stewrobot.com लाइव है और GitHub Pages से जुड़ा है।',
+          status_2_title: '✅ बोर्ड सर्वर रिपॉजिटरी', status_2_text: 'Node.js बोर्ड बैकएंड API, टिप्पणियों और पासवर्ड सुरक्षा के साथ प्रकाशित है।',
+          status_3_title: '✅ लाइव बोर्ड डिप्लॉय', status_3_text: 'HTTPS सक्रिय है और board.stewrobot.com उपलब्ध है।',
+          progress_log_title: 'हाल के माइलस्टोन (नवीनतम पहले)',
+          milestone_1: 'लाइव बोर्ड HTTPS सक्रिय और कस्टम डोमेन रूटिंग स्थिर हुई।',
+          milestone_2: 'कम्युनिटी वर्कस्पेस मोड जोड़ा गया (इन-पेज बोर्ड कंट्रोल)।',
+          milestone_3: 'बोर्ड CRUD, टिप्पणियाँ, पासवर्ड सुरक्षा और IP कैप्चर पूरा हुआ।',
+          milestone_4: 'वेब, मोबाइल, बैकएंड और साझा पैकेज के लिए मोनोरेपो संरचना लॉन्च हुई।',
+          milestone_5: 'ऑर्गनाइज़ेशन, सोशल ब्रांडिंग और डोमेन पाइपलाइन स्थापित हुई।',
+          labs_title: 'लैब्स',
+          labs_intro: 'ऐप, समाधान और ऑटोमेशन प्रयोगों का स्थान जो आगे चलकर सेवाओं में बदल सकते हैं।',
+          labs_1_title: 'Community Board Engine', labs_1_text: 'चर्चा और तेज़ फीडबैक लूप के लिए लाइव सेवा।', labs_1_meta: 'status: live · type: platform',
+          labs_2_title: 'Agent Workflow Runner', labs_2_text: 'एजेंट-सहायता प्राप्त संचालन के लिए ऑटोमेशन पैटर्न।', labs_2_meta: 'status: in progress · type: solution',
+          labs_3_title: 'Mobile Companion Experiments', labs_3_text: 'stewrobot इकोसिस्टम से जुड़े मोबाइल यूटिलिटी कॉन्सेप्ट।', labs_3_meta: 'status: planned · type: app',
+          board_title: '📋 24/7', board_api_link: 'API दस्तावेज़',
+          board_tab_home: '📋 सूची', board_tab_write: '✏️ लिखें', board_total_label: 'कुल',
+          board_col_id: 'सं.', board_col_title: 'शीर्षक', board_col_author: 'लेखक', board_col_created: 'तारीख', board_col_views: 'देखा गया', board_col_comments: 'टिप्पणियाँ',
           board_loading: 'पोस्ट लोड हो रहे हैं...', board_empty: 'अभी कोई पोस्ट नहीं है।',
-          comments_title: 'टिप्पणियाँ', write_title: '✏️ पोस्ट लिखें', comment_write: 'टिप्पणी लिखें', comment_submit: 'टिप्पणी करें', pager_prev: '← पिछला', pager_next: 'अगला →',
+          comments_title: 'टिप्पणियाँ', write_cancel: 'रद्द करें', write_submit: 'पोस्ट करें',
+          field_content: 'सामग्री', field_title: 'शीर्षक', field_password: 'पासवर्ड', field_author: 'लेखक',
+          write_title: '✏️ पोस्ट लिखें', comment_write: 'टिप्पणी लिखें', comment_submit: 'टिप्पणी करें', pager_prev: '← पिछला', pager_next: 'अगला →',
+          deploy_title: 'डिप्लॉय', deploy_intro: 'विश्वसनीय सेवा डिलीवरी के लिए डिप्लॉयमेंट चेकलिस्ट और ऑपरेशन बेसलाइन।',
+          deploy_1: 'प्रोडक्शन सर्वर पर MySQL + PM2 + Nginx इंस्टॉल करें',
+          deploy_2: 'MySQL पर <code>sql/schema.sql</code> लागू करें',
+          deploy_3: 'प्रोडक्शन DB मानों के साथ <code>.env</code> सेट करें और <code>USE_IN_MEMORY=false</code> रखें',
+          deploy_4: 'PM2 के माध्यम से ऐप को पोर्ट 3000 पर चलाएँ (<code>ecosystem.config.cjs</code>)',
+          deploy_5: 'रिवर्स प्रॉक्सी <code>board.stewrobot.com</code> → <code>127.0.0.1:3000</code>',
+          deploy_6: 'HTTPS सक्षम करें और CRUD + API docs सत्यापित करें',
+          deploy_7: 'दैनिक DB बैकअप + 14 दिन रिटेंशन + मासिक रिस्टोर ड्रिल',
+          deploy_8: 'अपटाइम, एरर लॉग और सर्टिफिकेट रिन्यूअल की निगरानी करें',
+          ops_title: 'सर्विस मैप', ops_note: 'यह मैप सार्वजनिक वेबसाइट, लाइव बोर्ड और डेटा लेयर के कनेक्शन को दिखाता है।',
           footer_prefix: '©', footer_suffix: 'सर्वाधिकार सुरक्षित।'
         },
         ar: {
           nav_home: 'الرئيسية', nav_about: 'نظرة عامة', nav_status: 'التقدم', nav_contact: '24/7', nav_labs: 'المختبرات', nav_deploy: 'النشر',
           lang_full: 'كامل', lang_partial: 'جزئي',
-          eyebrow: '♾️ بنّاء ذكاء اصطناعي كوني', hero_title: 'إطلاق يركز على المجتمع.',
-          hero_lead: 'يبني stewrobot منتجات ذكاء اصطناعي عملية مع حلقة تغذية راجعة سريعة.',
-          about_title: 'نظرة عامة', status_title: 'التقدم', labs_title: 'المختبرات', deploy_title: 'النشر',
-          labs_intro: 'مساحة لتجارب التطبيقات والحلول والأتمتة التي قد تتحول إلى خدمات كاملة.',
-          board_title: '📋 24/7', board_api_link: 'توثيق API', board_tab_home: '📋 القائمة', board_tab_write: '✏️ كتابة',
-          board_total_label: 'الإجمالي', board_col_id: 'رقم', board_col_title: 'العنوان', board_col_author: 'الكاتب', board_col_created: 'التاريخ', board_col_views: 'المشاهدات', board_col_comments: 'التعليقات',
+          eyebrow: '♾️ بنّاء ذكاء اصطناعي كوني',
+          hero_title: 'إطلاق يتمحور حول المجتمع قيد التنفيذ.',
+          hero_lead: 'يبني stewrobot منتجات ذكاء اصطناعي عملية مع دورة تغذية راجعة سريعة.',
+          cta_github: 'GitHub',
+          about_title: 'نظرة عامة',
+          about_text: 'يحوّل stewrobot الأفكار بسرعة إلى منتجات ذكاء اصطناعي قابلة للاستخدام الفعلي.',
+          about_text_2: 'نركز على وضوح تعريف المشكلة، النماذج الأولية السريعة، والتغذية الراجعة المستمرة من المستخدمين.',
+          about_text_3: 'يشمل النطاق الحالي بنية الويب، أساس التوسع على الجوال، وسير العمل المؤتمت.',
+          status_title: 'التقدم',
+          status_1_title: '✅ النطاق وPages', status_1_text: 'الموقع stewrobot.com متاح ومربوط بـ GitHub Pages.',
+          status_2_title: '✅ مستودع خادم اللوحة', status_2_text: 'تم نشر خلفية Node.js للوحة مع API والتعليقات وحماية بكلمة مرور.',
+          status_3_title: '✅ نشر اللوحة المباشرة', status_3_text: 'تم تفعيل HTTPS وأصبح board.stewrobot.com متاحًا.',
+          progress_log_title: 'أحدث المحطات (الأحدث أولًا)',
+          milestone_1: 'تفعيل HTTPS للوحة المباشرة وتثبيت توجيه النطاق المخصص.',
+          milestone_2: 'إضافة وضع مساحة عمل المجتمع (عناصر تحكم داخل الصفحة).',
+          milestone_3: 'اكتمال CRUD للوحة والتعليقات والحماية بكلمة مرور وتسجيل IP.',
+          milestone_4: 'إطلاق هيكل Monorepo للويب والجوال والخلفية والحزم المشتركة.',
+          milestone_5: 'تأسيس بنية التنظيم والهوية الاجتماعية وخط النطاق.',
+          labs_title: 'المختبرات',
+          labs_intro: 'مساحة لتجارب التطبيقات والحلول والأتمتة التي قد تتطور إلى خدمات كاملة.',
+          labs_1_title: 'Community Board Engine', labs_1_text: 'خدمة مباشرة للنقاش وحلقات التغذية الراجعة السريعة.', labs_1_meta: 'status: live · type: platform',
+          labs_2_title: 'Agent Workflow Runner', labs_2_text: 'أنماط أتمتة لعمليات مدعومة بالوكلاء.', labs_2_meta: 'status: in progress · type: solution',
+          labs_3_title: 'Mobile Companion Experiments', labs_3_text: 'مفاهيم مبكرة لتجارب خدمية على الجوال ضمن منظومة stewrobot.', labs_3_meta: 'status: planned · type: app',
+          board_title: '📋 24/7', board_api_link: 'توثيق API',
+          board_tab_home: '📋 القائمة', board_tab_write: '✏️ كتابة', board_total_label: 'الإجمالي',
+          board_col_id: 'رقم', board_col_title: 'العنوان', board_col_author: 'الكاتب', board_col_created: 'التاريخ', board_col_views: 'المشاهدات', board_col_comments: 'التعليقات',
           board_loading: 'جارٍ تحميل المنشورات...', board_empty: 'لا توجد منشورات بعد.',
-          comments_title: 'التعليقات', write_title: '✏️ كتابة منشور', comment_write: 'اكتب تعليقًا', comment_submit: 'إرسال', pager_prev: '← السابق', pager_next: 'التالي →',
+          comments_title: 'التعليقات', write_cancel: 'إلغاء', write_submit: 'نشر',
+          field_content: 'المحتوى', field_title: 'العنوان', field_password: 'كلمة المرور', field_author: 'الكاتب',
+          write_title: '✏️ كتابة منشور', comment_write: 'اكتب تعليقًا', comment_submit: 'إرسال التعليق', pager_prev: '← السابق', pager_next: 'التالي →',
+          deploy_title: 'النشر', deploy_intro: 'قائمة تحقق للنشر وخط أساس تشغيلي لتسليم خدمة موثوقة.',
+          deploy_1: 'تثبيت MySQL + PM2 + Nginx على خادم الإنتاج',
+          deploy_2: 'تطبيق <code>sql/schema.sql</code> على قاعدة MySQL',
+          deploy_3: 'ضبط <code>.env</code> بقيم الإنتاج وتأكيد <code>USE_IN_MEMORY=false</code>',
+          deploy_4: 'تشغيل التطبيق على المنفذ 3000 عبر PM2 (<code>ecosystem.config.cjs</code>)',
+          deploy_5: 'وكيل عكسي <code>board.stewrobot.com</code> → <code>127.0.0.1:3000</code>',
+          deploy_6: 'تفعيل HTTPS والتحقق من CRUD + توثيق API',
+          deploy_7: 'نسخ احتياطي يومي لقاعدة البيانات + احتفاظ 14 يومًا + تدريب استعادة شهري',
+          deploy_8: 'مراقبة وقت التشغيل وسجلات الأخطاء وتجديد الشهادات',
+          ops_title: 'خريطة الخدمة', ops_note: 'توضح هذه الخريطة اتصال الموقع العام واللوحة المباشرة وطبقة البيانات.',
           footer_prefix: '©', footer_suffix: 'جميع الحقوق محفوظة.'
         },
         fr: {
