feat: mobile hamburger menu demo for top navigation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <span class="brand-word">stewrobot</span>
         </a>
         <div class="top-actions">
+          <button class="menu-toggle" id="menuToggle" aria-label="Open menu" aria-expanded="false">☰</button>
           <nav class="main-nav" id="mainNav">
             <a href="#" class="nav-link active" data-view="home" data-i18n="nav_home">Home</a>
             <a href="#" class="nav-link" data-view="overview" data-i18n="nav_about">Overview</a>
@@ -856,10 +857,20 @@
         }
       }
 
+
+      const menuToggle = document.getElementById('menuToggle');
+      const mainNav = document.getElementById('mainNav');
+      menuToggle?.addEventListener('click', () => {
+        const open = mainNav.classList.toggle('open');
+        menuToggle.setAttribute('aria-expanded', open ? 'true' : 'false');
+      });
+
       document.querySelectorAll('.main-nav .nav-link').forEach((el) => {
         el.addEventListener('click', (e) => {
           e.preventDefault();
           setMainView(el.dataset.view);
+          mainNav?.classList.remove('open');
+          menuToggle?.setAttribute('aria-expanded', 'false');
         });
       });
 
