--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
 
       
 
-      <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
+      <div class="floating-nav">
+        <button id="menuStepBtn" class="back-to-top menu-step" aria-label="Next menu section">≡</button>
+        <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
+      </div>
     </main>
 
     <footer class="footer">
@@ -1094,13 +1097,23 @@
 
 
       const backToTopBtn = document.getElementById('backToTop');
+      const menuStepBtn = document.getElementById('menuStepBtn');
+      const mobileStepOrder = ['home', 'community', 'overview', 'progress', 'labs', 'deploy'];
       const syncBackToTop = () => {
-        if (!backToTopBtn) return;
-        backToTopBtn.classList.toggle('show', window.scrollY > 420);
+        if (!backToTopBtn || !menuStepBtn) return;
+        const show = window.scrollY > 260;
+        backToTopBtn.classList.toggle('show', show);
+        menuStepBtn.classList.toggle('show', show);
       };
       window.addEventListener('scroll', syncBackToTop, { passive: true });
       backToTopBtn?.addEventListener('click', () => {
         window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+      menuStepBtn?.addEventListener('click', () => {
+        const active = document.querySelector('.main-nav .nav-link.active')?.dataset.view || 'home';
+        const idx = mobileStepOrder.indexOf(active);
+        const next = mobileStepOrder[(idx + 1) % mobileStepOrder.length];
+        setMainView(next);
       });
       syncBackToTop();
 
