--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
           setMainView('labs');
         }, 40);
       } else {
-        setMainView('community');
+        setMainView('home');
       }
     </script>
   </body>
